--- a/index.html
+++ b/index.html
@@ -378,13 +378,13 @@
                       <div class="reviews-slider__item-heading"><img src="img/reviews-default.jpg" alt=""/>
                         <h3 class="reviews-slider__item-name">Владимир</h3>
                       </div>
-                      <p class="reviews-slider__item-text">Заказывал лестницу в декабре — а в начале февраля уже установили и всего на 1 день позже срока по договору. Прошло полтора месяца — лестница стоит как влитая, ни скрипа ни качания не наблюдаем… Спасибо большое!!!</p>
+                      <p class="reviews-slider__item-text">Заказывал лестницу в декабре — а в начале января уже установили и всего на 1 день позже срока по договору. Прошло полтора месяца — лестница стоит как влитая, ни скрипа ни качания не наблюдаем… Спасибо большое!!!</p>
                     </div>
                     <div class="reviews-slider__item">
                       <div class="reviews-slider__item-heading"><img src="img/reviews-default.jpg" alt=""/>
                         <h3 class="reviews-slider__item-name">Мария Мальцева</h3>
                       </div>
-                      <p class="reviews-slider__item-text">Мы с супругой заказали лестницу в ТЦ «Русская деревня» и не ошиблись с выбором.Лестница довольно сложной конфигурации,в простом магазине такую не купишь.Сделали в срок, очень качественно,учли все наши пожелания и помогли подобрать подходящее дерево. Лестницей мы очень довольны.</p>
+                      <p class="reviews-slider__item-text">Мы с супругой заказали лестницу в компании «Горница» и не ошиблись с выбором.Лестница довольно сложной конфигурации,в простом магазине такую не купишь.Сделали в срок, очень качественно,учли все наши пожелания и помогли подобрать подходящее дерево. Лестницей мы очень довольны.</p>
                     </div>
                   </div>
                 </div>
@@ -407,8 +407,8 @@
                             <use xlink:href="sprites/sprite-mono.svg#faq-toggle"></use>
                           </svg>
                         </button>
-                        <h3 class="faq__question js-faq-question">Как узнать размер лестницы?</h3>
-                        <div class="faq__answer js-faq-answer">lorem</div>
+                        <h3 class="faq__question js-faq-question">Как выбрать лестницу?</h3>
+                        <div class="faq__answer js-faq-answer">Для определения модели лестницы для вашего дома необходимо решить, какая она будет: прямая, с поворотом на 90 градусов (Г-образная), или с поворотом на 180 градусов (П-образная). Затем нужно определить ее направление: если вы поворачиваете при подьеме направо, значит, она правая, а если поворачиваете налево, соответственно, левая. Перейдем к размерам, которые нужны для расчета лестницы: высота в помещении от пола 1-го этажа до пола 2-го этажа, длина и ширина проема где будет стоять лестница</div>
                       </div>
                       <div class="faq__item js-faq-item">
                         <button class="faq__toggler js-faq-toggler">
@@ -417,7 +417,7 @@
                           </svg>
                         </button>
                         <h3 class="faq__question js-faq-question">Можно сделать лестницу по индивидуальному заказу?</h3>
-                        <div class="faq__answer js-faq-answer">lorem</div>
+                        <div class="faq__answer js-faq-answer">Лестницу по индивидуальному заказу можно заказать у нас. Для этого нужно вызвать специалиста для осуществления замеров вашего помещения. После этого специалист делает расчет в соответствии с вашими возможнотями помещения и вашими предпочтениями. Во время консультации специалист может дать совет по выборе материала для лестницы. Сроки изготовления- от 15 дней до 1 месяца. При оформлении заказа заклбчается договор с гарантией</div>
                       </div>
                       <div class="faq__item js-faq-item">
                         <button class="faq__toggler js-faq-toggler">
@@ -425,8 +425,8 @@
                             <use xlink:href="sprites/sprite-mono.svg#faq-toggle"></use>
                           </svg>
                         </button>
-                        <h3 class="faq__question js-faq-question">Сколько стоит готовый лестничный комплект?</h3>
-                        <div class="faq__answer js-faq-answer">lorem</div>
+                        <h3 class="faq__question js-faq-question">Сколько стоит лестница?</h3>
+                        <div class="faq__answer js-faq-answer">Стоимость лестницы из сосны заводского производства начинается от 10500 рублей. Стоимость зависит от конструктива лестницы, сложности сборки и стоимости используемых материалов</div>
                       </div>
                       <div class="faq__item js-faq-item">
                         <button class="faq__toggler js-faq-toggler">
@@ -434,26 +434,8 @@
                             <use xlink:href="sprites/sprite-mono.svg#faq-toggle"></use>
                           </svg>
                         </button>
-                        <h3 class="faq__question js-faq-question">Где купить вашу фирменную лестницу на второй этаж в Ярославле?</h3>
-                        <div class="faq__answer js-faq-answer">lorem</div>
-                      </div>
-                      <div class="faq__item js-faq-item">
-                        <button class="faq__toggler js-faq-toggler">
-                          <svg>
-                            <use xlink:href="sprites/sprite-mono.svg#faq-toggle"></use>
-                          </svg>
-                        </button>
-                        <h3 class="faq__question js-faq-question">Где расположено производство?</h3>
-                        <div class="faq__answer js-faq-answer">lorem</div>
-                      </div>
-                      <div class="faq__item js-faq-item">
-                        <button class="faq__toggler js-faq-toggler">
-                          <svg>
-                            <use xlink:href="sprites/sprite-mono.svg#faq-toggle"></use>
-                          </svg>
-                        </button>
-                        <h3 class="faq__question js-faq-question">Чем отличается правая лестница от левой?</h3>
-                        <div class="faq__answer js-faq-answer">lorem</div>
+                        <h3 class="faq__question js-faq-question">Как купить лестницу?</h3>
+                        <div class="faq__answer js-faq-answer">Оформить заказ на готовый комплект лестницы, на индивидуальную лестницу, а также лестницу на металлическом каркасе можно, посетив офис по адресу: г.Ярославль, ул. Магистральная, 7, либо оформить заказ по телефону: <a href="tel:+7 (4852) 67-07-98">+7 (4852) 67-07-98</a>. Оплата предварительная, составляет 70% от стоимости лестницы, оплата возможна наличным, безналичным расчетом, а так же по QR-коду</div>
                       </div>
               </div>
             </div>
@@ -495,7 +477,7 @@
           </div>
           <div class="section__content">
             <div class="seo">
-              <p>ИП Тарасов Сергей Михайлович оказывает услуги по доставке, установке лестниц. У нас можно купить, изготовить лестницу, и рассчитать заранее стоимость с помощью консультанта. Также мы предоставляем услуги по покраске лестниц, и реализуем комплектующие для самстоятельной сборки – у нас можно купить деревянные ступени, балясины, косоуры и т.д.</p>
+              <p>Производство и продажа лестниц от ИП Тарасов С.М.  берет свое начало с 2008 года в городе Ярославль. Благодаря слаженной работе специалистов, за это время мы сумели расширить географию производства лестниц и сейчас наша компания работает не только на территории Ярославской области, но и в Костромской, Ивановской, Владимирской, Вологодской и Московской областях.</p>
             </div>
           </div>
         </div>
