--- a/portfolio.html
+++ b/portfolio.html
@@ -104,13 +104,13 @@
                       <div class="reviews-slider__item-heading"><img src="img/reviews-default.jpg" alt=""/>
                         <h3 class="reviews-slider__item-name">Владимир</h3>
                       </div>
-                      <p class="reviews-slider__item-text">Заказывал лестницу в декабре — а в начале февраля уже установили и всего на 1 день позже срока по договору. Прошло полтора месяца — лестница стоит как влитая, ни скрипа ни качания не наблюдаем… Спасибо большое!!!</p>
+                      <p class="reviews-slider__item-text">Заказывал лестницу в декабре — а в начале января уже установили и всего на 1 день позже срока по договору. Прошло полтора месяца — лестница стоит как влитая, ни скрипа ни качания не наблюдаем… Спасибо большое!!!</p>
                     </div>
                     <div class="reviews-slider__item">
                       <div class="reviews-slider__item-heading"><img src="img/reviews-default.jpg" alt=""/>
                         <h3 class="reviews-slider__item-name">Мария Мальцева</h3>
                       </div>
-                      <p class="reviews-slider__item-text">Мы с супругой заказали лестницу в ТЦ «Русская деревня» и не ошиблись с выбором.Лестница довольно сложной конфигурации,в простом магазине такую не купишь.Сделали в срок, очень качественно,учли все наши пожелания и помогли подобрать подходящее дерево. Лестницей мы очень довольны.</p>
+                      <p class="reviews-slider__item-text">Мы с супругой заказали лестницу в компании «Горница» и не ошиблись с выбором.Лестница довольно сложной конфигурации,в простом магазине такую не купишь.Сделали в срок, очень качественно,учли все наши пожелания и помогли подобрать подходящее дерево. Лестницей мы очень довольны.</p>
                     </div>
                   </div>
                 </div>
