--- a/index.html
+++ b/index.html
@@ -386,6 +386,12 @@
                       </div>
                       <p class="reviews-slider__item-text">Мы с супругой заказали лестницу в компании «Горница» и не ошиблись с выбором.Лестница довольно сложной конфигурации,в простом магазине такую не купишь.Сделали в срок, очень качественно,учли все наши пожелания и помогли подобрать подходящее дерево. Лестницей мы очень довольны.</p>
                     </div>
+                    <div class="reviews-slider__item">
+                      <div class="reviews-slider__item-heading"><img src="img/reviews-default.jpg" alt=""/>
+                        <h3 class="reviews-slider__item-name">Кристина Самиева</h3>
+                      </div>
+                      <p class="reviews-slider__item-text">Здравствуйте! Хочу оставить обратную связь о работе с компанией «Горница». Делала ремонт кухни, заказывала фасады (14 шт) + окраску. Качество отличное, цвет получился таким, как я хотела, доставили все в срок. Спасибо большое!</p>
+                    </div>
                   </div>
                 </div>
               </div>
